[gd_scene load_steps=3 format=3 uid="uid://5sdcmuwc1nye"]

[ext_resource type="Theme" uid="uid://mxuh4rggdod8" path="res://Scripts/Resources/default_theme.tres" id="1_q6gaf"]
[ext_resource type="Script" uid="uid://bkonk3rke2myt" path="res://Scripts/UI/submit_score.gd" id="1_rg3r4"]

[node name="SubmitScore" type="Control"]
process_mode = 3
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_rg3r4")

[node name="SubmitScore" type="Panel" parent="."]
layout_mode = 0
offset_left = 193.0
offset_top = 181.0
offset_right = 321.0
offset_bottom = 278.0
theme = ExtResource("1_q6gaf")

[node name="Label" type="Label" parent="SubmitScore"]
layout_mode = 0
offset_left = 13.0
offset_top = 7.0
offset_right = 118.0
offset_bottom = 22.2344
theme_override_font_sizes/font_size = 15
text = "Record Your Highscore"

[node name="LineEdit" type="LineEdit" parent="SubmitScore"]
layout_mode = 0
offset_left = 30.0
offset_top = 26.0
offset_right = 102.0
offset_bottom = 48.0
theme = ExtResource("1_q6gaf")
theme_override_font_sizes/font_size = 13
placeholder_text = "Enter Name:"

[node name="Submit" type="Button" parent="SubmitScore"]
layout_mode = 0
offset_left = 50.0
offset_top = 53.0
offset_right = 81.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 11
text = "Submit
"

[node name="WarningText" type="Label" parent="SubmitScore"]
visible = false
layout_mode = 0
offset_left = 23.0
offset_top = 77.0
offset_right = 110.0
offset_bottom = 91.0
theme_override_colors/font_color = Color(1, 0.351989, 0.285134, 1)
theme_override_font_sizes/font_size = 13
text = "Please enter a name!"

[connection signal="mouse_entered" from="SubmitScore/Submit" to="." method="_on_button_entered"]
[connection signal="pressed" from="SubmitScore/Submit" to="." method="_on_submit_pressed"]
